--- a/module2-solution/css/main.css
+++ b/module2-solution/css/main.css
@@ -1,9 +1,9 @@
 /**************Base style******************/
-body, h1, h3, section, div {
+body, h1, h3, p, section, div {
 	margin: 0;
 	padding: 0;
 }
-body {
+h1, h3, p {
 	font-family: 'Comic Sans MS', cursive;
 }
 h1 {
@@ -12,32 +12,35 @@ h1 {
 }
 
 .container {
+	width: 80%;
 	margin: 0 auto;
 	overflow: hidden;
 }
 
-section {
+.menu-list {
 	float: left;
-	padding: 40px 10px 20px;
-	position: relative;
+	padding: 20px;
 	box-sizing: border-box;
+}
+
+section {
+	padding: 40px 10px 10px;
 	border: 3px solid black;
-}
-
-.s1, .s2, .s3 {
 	background-color: #979797;
+	text-align: justify;
+	position: relative;
 }
 
-.s1 h3 {
+.menu-list-1 h3 {
 	background-color: #DE9398;
 }
-.s2 h3 {
+.menu-list-2 h3 {
 	background-color: #CA4149;
 }
-.s3 h3 {
+.menu-list-3 h3 {
 	background-color: #E9CD9E;
 }
-section h3 {
+section > h3 {
 	display: block;
 	color: white;	
 	border-left: 3px solid black;
@@ -49,35 +52,22 @@ section h3 {
 }
 /**************Mobile**********************/
 @media (max-width: 767px) {
-	.container {
-		width: 700px;
-	}
-	section {
+	.menu-list {
 		width: 100%;
-		margin-bottom: 20px;
 	}
 }
 /**************Tablet**********************/
 @media (min-width: 768px) and (max-width: 991px) {
-	.container {
-		width: 800px;
+	.menu-list-1, .menu-list-2 {
+		width: 50%;
 	}
-	.s1, .s2 {
-		width: 45%;
-		margin-right: 5%;
-		margin-bottom: 20px;
-	}
-	.s3 {
-		width: 95%;
+	.menu-list-3 {
+		width: 100%;
 	}
 }
 /**************Desktop*********************/
 @media (min-width: 992px) {
-	.container {
-		width: 1000px;
-	}
-	section {
-		width: 30%;
-		margin-right: 3.3%;
+	.menu-list {
+		width: 33.33%;
 	}
 }
