--- a/website/css/style.css
+++ b/website/css/style.css
@@ -121,6 +121,35 @@ body {
 	opacity: .8;
 }
 /*END HOME TILES*/
+
+/*MENU CATEGORIES PAGE*/
+.category-tile {
+	position: relative;
+	border: 2px solid #3F0C1F;
+	overflow: hidden;
+	width: 200px;
+	height: 200px;
+	margin: 0 auto 15px;
+}
+.category-tile span {
+	position: absolute;
+	bottom: 0;
+	right: 0;
+	width: 100%;
+	text-align: center;
+	font-size: 1.2em;
+	text-transform: uppercase;
+	background-color: #222;
+	color: #fff;
+	opacity: .8;
+}
+.category-tile:hover {
+	box-shadow: 0 1px 5px 1px #ccc;
+}
+
+#menu-categories-title + div {
+	margin-bottom: 50px;
+}
 /*FOOTER*/
 .panel-footer {
 	margin-top: 30px;
@@ -247,8 +276,16 @@ body {
 		padding-top: 5px;
 		font-size: 6vw;/* 1vw = 1% of viewport width*/
 	}
+	/*Home page*/
 	#menu-tile, #specials-tile {
 		width: 280px;
 		margin: 0 auto 15px;
+	}
+	.col-xxs-12 {
+		position: relative;
+		min-height: 1px;
+		padding-right: 15px;
+		padding-left: 15px;
+		width: 100%
 	}
 }
